Exceptions replaced with IHttpActionResults
And R# CleanUp

--- a/MGSUBackend/MGSUBackend.csproj
+++ b/MGSUBackend/MGSUBackend.csproj
@@ -112,6 +112,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ImageModel.cs" />
+    <Compile Include="Models\Mappers\ObjectMapper.cs" />
     <Compile Include="Models\Mappers\PostMapper.cs" />
     <Compile Include="Models\Mappers\UserMapper.cs" />
     <Compile Include="Models\PostModel.cs" />
