Sample "Contact" work implemented

--- a/MGSUBackend/MGSUBackend.csproj
+++ b/MGSUBackend/MGSUBackend.csproj
@@ -106,8 +106,9 @@
   <ItemGroup>
     <Compile Include="App_Start\Bootstraper.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\PostController.cs" />
-    <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\ContactsController.cs" />
+    <Compile Include="Controllers\PostsController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
