--- a/UserManagment/UserManagment.csproj
+++ b/UserManagment/UserManagment.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\IContactManager.cs" />
     <Compile Include="Application\IUserManager.cs" />
+    <Compile Include="ContactManager.cs" />
     <Compile Include="Entities\Contact.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Entities\UserRole.cs" />
