--- a/MGSUBackend/packages.config
+++ b/MGSUBackend/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
+  <package id="Journalist.LanguageExtensions" version="0.16.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client.ru" version="5.2.3" targetFramework="net45" />
