All except top-layer moved properly

--- a/Domain/ProjectManagment/ProjectManagment.csproj
+++ b/Domain/ProjectManagment/ProjectManagment.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="MongoDB.Bson">
+      <HintPath>C:\Users\boris\.nuget\packages\mongodb.bson\2.4.3\lib\netstandard1.5\MongoDB.Bson.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
 </Project>
