--- a/MGSUCore/MGSUCore.csproj
+++ b/MGSUCore/MGSUCore.csproj
@@ -13,12 +13,15 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
+    <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc" Version="4.0.6" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Domain\PostManagment\PostManagment.csproj" />
+    <ProjectReference Include="..\Domain\UserManagment\UserManagment.csproj" />
   </ItemGroup>
 
 </Project>
