--- a/Domain/FileManagment/FileManagment.csproj
+++ b/Domain/FileManagment/FileManagment.csproj
@@ -3,11 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
-
+	
   <ItemGroup>
-    <Folder Include="Application\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Common\Common.csproj" />
+    <PackageReference Include="ImageSharp" Version="1.0.0-alpha9-00034" />
   </ItemGroup>
 </Project>
