--- a/Domain/FileManagment/FileManagment.csproj
+++ b/Domain/FileManagment/FileManagment.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 	
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="ImageSharp" Version="1.0.0-alpha9-00034" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common.csproj" />
+  </ItemGroup>
+	
 </Project>
