--- a/MGSUCore/appsettings.Development.json
+++ b/MGSUCore/appsettings.Development.json
@@ -1,4 +1,15 @@
 ﻿{
+  "ConnectionStrings": {
+    "Mongo": "mongodb://127.0.0.1:27017/mgsu",
+  },
+
+  "FileStorageSettings": {
+    "AllowedImageExtensions": [ "jpeg", "jpg", "png", "svg" ],
+    "MaxImageSize": 500,
+    "ImageStorageFolder": "/data/kestrel/Images",
+    "FileStorageFolder": "/data/kestrel/Files"
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
