--- a/MGSUCore/appsettings.Development.json
+++ b/MGSUCore/appsettings.Development.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "Mongo": "mongodb://127.0.0.1:27017/mgsu"
+  },
+  
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
