--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -1,4 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
