--- a/Domain/ProjectManagment/ProjectManagment.csproj
+++ b/Domain/ProjectManagment/ProjectManagment.csproj
@@ -7,4 +7,9 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.4.3" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\Common.csproj" />
+    <ProjectReference Include="..\FileManagment\FileManagment.csproj" />
+  </ItemGroup>
 </Project>
