Donations logic implemented

--- a/MGSUCore/MGSUCore.csproj
+++ b/MGSUCore/MGSUCore.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Domain\FileManagment\FileManagment.csproj" />
     <ProjectReference Include="..\Domain\ProjectManagment\ProjectManagment.csproj" />
+    <ProjectReference Include="..\Domain\DonationManagment\DonationManagment.csproj" />
   </ItemGroup>
 
 </Project>
