--- a/Domain/DonationManagment/DonationManagment.csproj
+++ b/Domain/DonationManagment/DonationManagment.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\ProjectManagment\ProjectManagment.csproj" />
+    <ProjectReference Include="..\..\Common\Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
