--- a/MGSUCore/appsettings.Development.json
+++ b/MGSUCore/appsettings.Development.json
@@ -4,11 +4,9 @@
   },
   
   "Logging": {
-    "IncludeScopes": false,
+    "IncludeScopes": true,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information"
     }
   }
 }
