--- a/MGSUCore/appsettings.json
+++ b/MGSUCore/appsettings.json
@@ -5,5 +5,10 @@
     "MaxImageSize": 500,
     "ImageStorageFolder": "/data/kestrel/Images",
     "FileStorageFolder": "/data/kestrel/Files"
+  },
+
+  "DeploySettings" : {
+    "BackendAddress" : "http://localhost:5000",
+    "FrontendAddress" : "http://localhost:3000"
   }
 }
